hphp/hack/test/typecheck/inout/inout_hint2.php.like_types.exp
File "inout_hint2.php", line 20, characters 10-26:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
